--- a/custom_components/dominion_energy/manifest.json
+++ b/custom_components/dominion_energy/manifest.json
@@ -3,6 +3,7 @@
   "name": "Dominion Energy",
   "codeowners": [],
   "config_flow": true,
+  "dependencies": ["recorder"],
   "documentation": "https://github.com/your-repo/ha-dominion-energy",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/your-repo/ha-dominion-energy/issues",
